@@ -3,6 +3,9 @@ class SettingsController < ApplicationController
 
   def index
     @selected_lists = current_user.lists.find(:all, :select => "lists.id, lists.name", :order => 'name ASC')
-    @not_selected_lists = List.find(:all, :select => "lists.id, lists.name", :order => 'name ASC', :conditions => ["lists.id NOT IN (?)", @selected_lists.map(&:id)])
+    @not_selected_lists = List.find(:all, 
+                                    :select => "lists.id, lists.name", 
+                                    :order => 'name ASC', 
+                                    :conditions => @selected_lists.empty? ? nil : ["lists.id NOT IN (?)", @selected_lists.map(&:id)])
   end
 end
